2012-04-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/peeph-gbz80.def:
	  Removed peephole that resulted in invalid or operand on gbz80.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix #3521024.

2012-04-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed bug with cpx use. Optimize stack adjustments
	  of +/-1. Use mov #0 instead of clr with volatile operands to avoid
	  read side effect. Avoid using x as stack frame base unless it saves
	  clock cycles.

2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c,
	  src/SDCCopt.c,
	  src/z80/gen.c:
	  GET_VALUE_AT_ADDRESS with offset for z80, z180 and r2k.

2012-04-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Index stack frame via x instead of sp when convenient

2012-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Use msb to lsb order in assignment for compatibility
	  with hardware hardware registers. Expanded use of cpx and ldhx
	  instructions. Removed some old unused code. Fixed a stack bug in
	  genPlusIncr.

2012-04-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c:
	  Enable replacing division by power of two by conditional addition and shift (for hc08, z80, z180, gbz80 and r2k).
	* src/z80/gen.c,
	  src/mcs51/gen.c:
	  Fortify a "/* I assume that […]" comment by an assertion that would have saved me some time.

2012-04-20 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/main.c:
	  Enable CSE for an approx. 0.1-0.2% code size reduction.

2012-04-22 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libsdcc/gptr/eeprom{8,16}_gptrput[1234].c:
	  fix accessing EECON1.WREN

2012-04-22 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/libdev/Makefile.in:
	  build 16f72[01] only if --enable-new-pics is given, as the