@@ -1,3 +1,10 @@
+2012-04-25 Borut Razem <borut.razem AT gmail.com>
+
+	* src/common.h, src/ds390/main.c: include SDCCsystem.h in common.h
+	* src/SDCCmain.c: added newline at end of file
+	* src/SDCCicode.c: use TRUE instead of undefined true
+	* src/SDCCicode.h: fixed declaration of isOperandLiteral()
+
 2012-04-25 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/peeph-gbz80.def:
@@ -492,7 +499,8 @@
 	  src/avr/gen.c, src/ds390/gen.c, src/ds390/gen.h,
 	  src/ds390/main.c, src/ds390/main.h, src/hc08/gen.c,
 	  src/mcs51/gen.c, src/mcs51/main.c, src/mcs51/main.h,
-	  src/pic14/gen.c, src/pic16/gen.c, src/z80/gen.c:
+	  src/pic14/gen.c, src/pic16/gen.c, src/z80/gen.c,
+	  sdcc_vc_in.h, src/sdcc.vcxproj, src/sdcc.vcxproj.filters:
 	  unification of target code generation
 
 2012-03-30 Philipp Klaus Krause <pkk AT spth.de>
